--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 />
               </a>
               <ul class="heder_accordion_wrap">
-                <li>   
+                <li class="menu_item">   
                   <a class="header_accordion">
                   <h3 class="nav_accordion_tit">MAN</h3>
                   <i class="las la-chevron-down"></i>
@@ -98,7 +98,7 @@
                   <div class="panel">
                     <ul class="nav_wrap">
                       <li class="nav_item">
-                        <a class="nav_tit" href="#">
+                        <a href="#" class="nav_tit">
                           컬렉션
                         </a>
                         <div class="twodepth_wrap">
@@ -121,7 +121,7 @@
                         </div>
                       </li>
                       <li class="nav_item">
-                        <a class="nav_tit" href="#">레디투웨어</a>
+                        <a href="#" class="nav_tit">레디투웨어</a>
                         <div class="twodepth_wrap">
                           <div class="inner_wrap">
                             <ul class="twodepth_area">
@@ -163,7 +163,7 @@
                         </div>
                       </li>
                       <li class="nav_item">
-                        <a class="nav_tit" href="#">가방</a>
+                        <a href="#" class="nav_tit">가방</a>
                         <div class="twodepth_wrap">
                           <div class="inner_wrap">
                             <ul class="twodepth_area">
@@ -190,7 +190,7 @@
                         </div>
                       </li>
                       <li class="nav_item">
-                        <a class="nav_tit" href="#">슈즈</a>
+                        <a href="#" class="nav_tit" >슈즈</a>
                         <div class="twodepth_wrap">
                           <div class="inner_wrap">
                             <ul class="twodepth_area">
@@ -217,7 +217,7 @@
                         </div>
                       </li>
                       <li class="nav_item">
-                        <a class="nav_tit" href="#">액세서리</a>
+                        <a href="#" class="nav_tit">액세서리</a>
                         <div class="twodepth_wrap">
                           <div class="inner_wrap">
                             <ul class="twodepth_area">
@@ -256,7 +256,7 @@
                         </div>
                       </li>
                       <li class="nav_item">
-                        <a class="nav_tit" href="#">라이프스타일 액세서리</a>
+                        <a href="#" class="nav_tit">라이프스타일 액세서리</a>
                         <div class="twodepth_wrap">
                           <div class="inner_wrap">
                             <ul class="twodepth_area">
@@ -274,7 +274,7 @@
                         </div>
                       </li>
                       <li class="nav_item">
-                        <a class="nav_tit" href="#">주얼리</a>
+                        <a href="#" class="nav_tit">주얼리</a>
                         <div class="twodepth_wrap">
                           <div class="inner_wrap">
                             <ul class="twodepth_area">
@@ -297,7 +297,7 @@
                     </ul>
                   </div>
                 </li>
-                <li>
+                <li class="menu_item">
                   <a class="header_accordion">
                   <h3 class="nav_accordion_tit">WOMAN</h3>
                   <i class="las la-chevron-down"></i>
@@ -305,7 +305,7 @@
                   <div class="panel">
                     <ul class="nav_wrap">
                       <li class="nav_item">
-                        <a class="nav_tit" href="#">
+                        <a href="#" class="nav_tit">
                           컬렉션
                         </a>
                         <div class="twodepth_wrap">
@@ -328,7 +328,7 @@
                         </div>
                       </li>
                         <li class="nav_item">
-                          <a class="nav_tit" href="#">레디투웨어</a>
+                          <a href="#" class="nav_tit">레디투웨어</a>
                           <div class="twodepth_wrap">
                             <div class="inner_wrap">
                               <ul class="twodepth_area">
@@ -373,7 +373,7 @@
                           </div>
                         </li>
                         <li  class="nav_item">
-                          <a class="nav_tit" href="#">가방</a>
+                          <a href="#" class="nav_tit">가방</a>
                           <div class="twodepth_wrap">
                             <div class="inner_wrap">
                               <ul class="twodepth_area">
@@ -403,7 +403,7 @@
                           </div>
                         </li>
                         <li class="nav_item">
-                          <a class="nav_tit" href="#">슈즈</a>
+                          <a href="#" class="nav_tit" >슈즈</a>
                           <div class="twodepth_wrap">
                             <div class="inner_wrap">
                               <ul class="twodepth_area">
@@ -436,7 +436,7 @@
                           </div>
                         </li>
                         <li class="nav_item">
-                          <a class="nav_tit" href="#">액세서리</a>
+                          <a href="#" class="nav_tit">액세서리</a>
                           <div class="twodepth_wrap">
                             <div class="inner_wrap">
                               <ul class="twodepth_area">
@@ -463,7 +463,7 @@
                           </div>
                         </li>
                         <li class="nav_item">
-                          <a class="nav_tit" href="#">라이프스타일 액세서리</a>
+                          <a href="#" class="nav_tit">라이프스타일 액세서리</a>
                           <div class="twodepth_wrap">
                             <div class="inner_wrap">
                               <ul class="twodepth_area">
@@ -481,7 +481,7 @@
                           </div>
                         </li>
                         <li class="nav_item">
-                          <a class="nav_tit" href="#">주얼리</a>
+                          <a href="#" class="nav_tit">주얼리</a>
                           <div class="twodepth_wrap">
                             <div class="inner_wrap">
                               <ul class="twodepth_area">
@@ -504,15 +504,15 @@
                     </ul>
                   </div>
                 </li>
-                <li>
+                <li class="menu_item">
                   <a class="header_accordion">
                   <h3 class="nav_accordion_tit">GIFT</h3>
                   <i class="las la-chevron-down"></i>
                   </a>
                   <div class="panel">
-                    <ul class="nav_wrap">
+                    <ul class="nav_wrap3">
                       <li class="nav_item">
-                        <a class="nav_tit" href="#">여자선물</a>
+                        <a href="#" class="nav_tit">여자선물</a>
                         <div class="twodepth_wrap">
                           <div class="inner_wrap">
                             <ul class="twodepth_area">
@@ -530,7 +530,7 @@
                         </div>
                       </li>
                       <li class="nav_item">
-                        <a class="nav_tit"  href="#">남자선물</a>
+                        <a href="#"  class="nav_tit">남자선물</a>
                         <div class="twodepth_wrap">
                           <div class="inner_wrap">
                             <ul class="twodepth_area">
@@ -542,35 +542,41 @@
                             </li>
                             <li class="twoDepth">
                               <a href="#">새로운 에센셜</a>
-                            </li>
+                            </li>    
                             </ul>
                           </div>
                         </div>
                       </li>
                     </ul>
                   </div>
-                </li>
-                <li>
+                </li>               
+                <li class="menu_item">
                   <a class="header_accordion">
                   <h3 class="nav_accordion_tit">LINEA ROSSA</h3>
                   <i class="las la-chevron-down"></i>
                   </a>
                   <div class="panel">
-                    <ul class="nav_wrap">
+                    <ul class="nav_wrap4">
                       <li class="nav_item">
-                        <a href="#">남자 리네아로사</a>
-                      </li>
-                      <li class="nav_item">
-                        <a href="#">레디투웨어</a>
-                      </li>
-                      <li class="nav_item">
-                        <a href="#">슈즈</a>
-                      </li>
-                      <li class="nav_item">
-                        <a href="#">가방 및 액세서리</a>
-                      </li>
-                      <li class="nav_item">
-                        <a href="#">선글라스</a>
+                        <a href="#" class="nav_tit">LINEA ROSSA</a>
+                        <div class="twodepth_wrap">
+                          <div class="inner_wrap">
+                            <ul class="twodepth_area">
+                              <li class="twoDepth">
+                                <a href="#">레디투웨어</a>
+                              </li>
+                            <li class="twoDepth">
+                              <a href="#">슈즈</a>
+                            </li>
+                            <li class="twoDepth">
+                              <a href="#">가방 및 액세서리</a>
+                            </li>
+                            <li class="twoDepth">
+                              <a href="#">장갑</a>
+                            </li>
+                            </ul>
+                          </div>
+                        </div>
                       </li>
                     </ul>
                   </div>
@@ -868,7 +874,9 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide"> 
                 <a href="#">
+                  <div class="img_box">
                   <img class="swiper_img" src="./images/pradasphere/pradasphere_shanghai.png" alt="pradasphere_shanghai">
+                </div>
                 </a>     
                 <div class="slide-img-txt-box">
                   <strong class="slide_mini-tit">PRADASPHERE II</strong>
@@ -882,7 +890,9 @@
               </div>
               <div class="swiper-slide">
                 <a href="#">
+                  <div class="img_box">
                   <img class="swiper_img" src="./images/pradasphere/Axiom.png" alt="Axiom">
+                </div>
                 </a>    
                 <div class="slide-img-txt-box">
                   <strong class="slide_mini-tit">Prada x Axiom</strong>
@@ -897,7 +907,9 @@
               </div>
               <div class="swiper-slide">
                 <a href="#">
+                  <div class="img_box">
                   <img class="swiper_img" src="./images/pradasphere/ss24_womanswear.png" alt="ss24_womanswear">
+                </div>
                 </a>    
                 <div class="slide-img-txt-box">
                   <strong class="slide_mini-tit">SS24 Womanswear</strong>
@@ -912,7 +924,9 @@
               </div>
               <div class="swiper-slide">
                 <a href="#">
+                  <div class="img_box">
                   <img class="swiper_img" src="./images/pradasphere/prada_mode_seoul.png" alt="prada_mode_seoul">
+                </div>
                 </a>    
                 <div class="slide-img-txt-box">
                   <strong class="slide_mini-tit">Prada Mode Seoul</strong>
@@ -927,7 +941,9 @@
               </div>
               <div class="swiper-slide">
                 <a href="#">
+                  <div class="img_box">
                   <img class="swiper_img" src="./images/pradasphere/PradaFW23 pop-ups_at_Harrods.png" alt="PradaFW23_pop-ups_at_Harrods">
+                </div>
                 </a>    
                 <div class="slide-img-txt-box">
                 <strong class="slide_mini-tit">Pop-ups at Harrods</strong>
