--- a/outline/footer.html
+++ b/outline/footer.html
@@ -1,25 +1,25 @@
 <footer id="footer" class="container">
-  <div class="inner">
+  <div class="ft_inner">
     <div class="logo">
       <a href="#">
-        <img src="/images/comm/PRADA.svg" alt="PRADA">
+        <img src="/images/comm/PRADA.svg" alt="PRADA" />
       </a>
     </div>
     <div>
       <ul class="footer-sns_icons">
         <li>
           <a href="#" class="fb">
-            <img src="/images/comm/SVG/Facebook.svg" alt="facebook">
+            <img src="/images/comm/SVG/Facebook.svg" alt="facebook" />
           </a>
         </li>
         <li>
           <a href="#" class="ins">
-            <img src="/images/comm/SVG/Instagram.svg" alt="instagram">
+            <img src="/images/comm/SVG/Instagram.svg" alt="instagram" />
           </a>
         </li>
         <li>
           <a href="#" class="tw">
-            <img src="/images/comm/SVG/Twitter.svg" alt="twitter">
+            <img src="/images/comm/SVG/Twitter.svg" alt="twitter" />
           </a>
         </li>
       </ul>
@@ -32,16 +32,20 @@
     </div>
     <div class="copyright">&#169;PRADA 2007 - 2023</div>
     <div class="footer_info">
-      <p>회사명: 프라다 코리아 (유) <br>
-        사업자 등록번호: 213-86-18599 <br>
-        대표자: 최문영. 개인정보 보호책임자: 김지훈이사 <br>
-        통신판매신고번호: 2017-서울강남-04082 <br>
-        고객 서비스 센터: 080-522-7199.</p>
+      <p>
+        회사명: 프라다 코리아 (유) <br />
+        사업자 등록번호: 213-86-18599 <br />
+        대표자: 최문영. 개인정보 보호책임자: 김지훈이사 <br />
+        통신판매신고번호: 2017-서울강남-04082 <br />
+        고객 서비스 센터: 080-522-7199.
+      </p>
     </div>
     <address class="footer_adr">
-      주소: 서울시 강남구 압구정로 439 06010 <br>
+      주소: 서울시 강남구 압구정로 439 06010 <br />
       이메일:
-      <a href="mailto:kimeumin98@naver.com" class="footer_mail">kimeumin98@naver.com</a>
-
+      <a href="mailto:kimeumin98@naver.com" class="footer_mail"
+        >kimeumin98@naver.com</a
+      >
     </address>
   </div>
+</footer>
