--- a/outline/footer.html
+++ b/outline/footer.html
@@ -5,7 +5,7 @@
         <img src="/images/comm/PRADA.svg" alt="PRADA" />
       </a>
     </div>
-    <div>
+    <div class="sns_icon">
       <ul class="footer-sns_icons">
         <li>
           <a href="#" class="fb">
@@ -30,22 +30,22 @@
       <a href="#" class="link_policy">개인정보처리방침</a>
       <a href="#" class="link_policy">이용안내</a>
     </div>
-    <div class="copyright">&#169;PRADA 2007 - 2023</div>
     <div class="footer_info">
-      <p>
+      <div class="copyright">&#169;PRADA 2007 - 2023</div>
+      <p class="ft_info1">
         회사명: 프라다 코리아 (유) <br />
         사업자 등록번호: 213-86-18599 <br />
         대표자: 최문영. 개인정보 보호책임자: 김지훈이사 <br />
         통신판매신고번호: 2017-서울강남-04082 <br />
         고객 서비스 센터: 080-522-7199.
       </p>
+      <div class="footer_adr">
+        주소: 서울시 강남구 압구정로 439 06010 <br />
+        이메일:
+        <a href="mailto:kimeumin98@naver.com" class="footer_mail"
+          >kimeumin98@naver.com</a
+        >
+      </div>
     </div>
-    <address class="footer_adr">
-      주소: 서울시 강남구 압구정로 439 06010 <br />
-      이메일:
-      <a href="mailto:kimeumin98@naver.com" class="footer_mail"
-        >kimeumin98@naver.com</a
-      >
-    </address>
   </div>
 </footer>
