--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <div class="wrap">
     <!-- logo 왼쪽 type -->
-    <header id="header" class="h_open">
+    <header id="header">
       <div class="inner">
         <h1 class="logo">
           <a href="#">
@@ -54,17 +54,17 @@
         <div class="gnb_wrap">
               <ul class="gnb">
                 <li>
-                  <a  href="#">WOMAN</a>
+                  <a class="gnb_tit" href="#">WOMAN</a>
                   <div class="gsnb">
                   <ul class="menu_item">
-                    <li><a href="#">컬렉션</a></li>
+                    <li><a class="first_tit" href="#">컬렉션</a></li>
                     <li><a href="#">신상품</a></li>
                     <li><a href="#">여성 선물</a></li>
                     <li><a href="#">2023 가을/겨울</a></li>
                     <li><a href="#">AC Factory</a></li>
                   </ul>
                   <ul class="menu_item">
-                    <li><a href="#">레디투웨어</a></li>
+                    <li><a class="first_tit" href="#">레디투웨어</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">재킷 및 코트</a></li>
                     <li><a href="#">셔츠 및 탑</a></li>
@@ -77,7 +77,7 @@
                     <li><a href="#">티셔츠 및 스웨트셔츠</a></li>
                   </ul>
                   <ul class="menu_item">
-                    <li><a href="#">가방</a></li>
+                    <li><a class="first_tit" href="#">가방</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">숄더백</a></li>
                     <li><a href="#">탑핸들</a></li>
@@ -87,7 +87,7 @@
                     <li><a href="#">브리프케이스</a></li>
                   </ul>
                   <ul class="menu_item">
-                    <li><a href="#">슈즈</a></li>
+                    <li><a class="first_tit" href="#">슈즈</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">로퍼</a></li>
                     <li><a href="#">레이스업</a></li>
@@ -98,7 +98,7 @@
                     <li><a href="#">샌들</a></li>
                   </ul>
                   <ul class="menu_item">
-                    <li><a href="#">액세서리</a></li>
+                    <li><a class="first_tit" href="#">액세서리</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">지갑 및 카드홀더</a></li>
                     <li><a href="#">하이테크 액세서리 및 키체인</a></li>
@@ -110,20 +110,20 @@
                     <li><a href="#">향수</a></li>
                     </ul>
                   <ul class="menu_item">
-                    <li><a href="#">라이프스타일 액세서리</a></li>
+                    <li><a class="first_tit" href="#">라이프스타일 액세서리</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">반려동물 액세서리</a></li>
                     <li><a href="#">스포츠 및 레저</a></li>
                     </ul>
                   <ul class="menu_item">
-                    <li><a href="#">주얼리</a></li>
+                    <li><a class="first_tit" href="#">주얼리</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">파인 주얼리 컬렉션</a></li>
                     <li><a href="#">실버 주얼리</a></li>
                     <li><a href="#">패션 주얼리</a></li>
                     </ul>
                   <ul class="menu_item">
-                    <li><a href="#">트래블</a></li>
+                    <li><a class="first_tit" href="#">트래블</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">파우치 및 트래블 액세서리</a></li>
                     <li><a href="#">트래블 백</a></li>
@@ -131,10 +131,10 @@
                   </div>
                 </li>
                 <li>
-                   <a href="#">MAN</a>
+                   <a class="gnb_tit" href="#">MAN</a>
                    <div class="gsnb">
                     <ul class="menu_item">
-                    <li><a href="#">컬렉션</a></li>
+                    <li><a class="first_tit" href="#">컬렉션</a></li>
                     <li><a href="#">신상품</a></li>
                     <li><a href="#">남성 선물</a></li>
                     <li><a href="#">2023 가을/겨울</a></li>
@@ -142,7 +142,7 @@
                     <li><a href="#">AC Factory</a></li>
                   </ul>
                     <ul class="menu_item">
-                    <li><a href="#">레디투웨어</a></li>
+                    <li><a class="first_tit" href="#">레디투웨어</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">재킷 및 코트</a></li>
                     <li><a href="#">니트웨어</a></li>
@@ -155,7 +155,7 @@
                     <li><a href="#">조깅복 및 스웨트 셔츠</a></li>
                   </ul>
                     <ul class="menu_item">
-                    <li><a href="#">가방</a></li>
+                    <li><a class="first_tit" href="#">가방</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">메신저백</a></li>
                     <li><a href="#">백팩 및 벨트백</a></li>
@@ -164,7 +164,7 @@
                     <li><a href="#">클러치</a></li>
                   </ul>
                     <ul class="menu_item">
-                    <li><a href="#">슈즈</a></li>
+                    <li><a class="first_tit" href="#">슈즈</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">스니커즈</a></li>
                     <li><a href="#">로퍼</a></li>
@@ -173,7 +173,7 @@
                     <li><a href="#">샌들</a></li>
                   </ul>
                     <ul class="menu_item">
-                    <li><a href="#">액세서리</a></li>
+                    <li><a class="first_tit" href="#">액세서리</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">지갑 및 카드홀더</a></li>
                     <li><a href="#">하이테크 액세서리 및 키체인</a></li>
@@ -186,20 +186,20 @@
                     <li><a href="#">향수</a></li>     
                   </ul>
                     <ul class="menu_item">
-                    <li><a href="#">라이프스타일 액세서리</a></li>
+                    <li><a class="first_tit" href="#">라이프스타일 액세서리</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">반려동물 액세서리</a></li>
                     <li><a href="#">스포츠 및 레저</a></li>
                   </ul>
                     <ul class="menu_item">
-                    <li><a href="#">주얼리</a></li>
+                    <li><a class="first_tit" href="#">주얼리</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">파인 주얼리 컬렉션</a></li>
                     <li><a href="#">실버 주얼리</a></li>
                     <li><a href="#">패션 주얼리</a></li>
                   </ul>
                     <ul class="menu_item">
-                    <li><a href="#">트래블</a></li>
+                    <li><a class="first_tit" href="#">트래블</a></li>
                     <li><a href="#">전체보기</a></li>
                     <li><a href="#">트래블 백</a></li>
                     <li><a href="#">러기지 및 트롤리</a></li>
@@ -208,25 +208,25 @@
                   </div>
                 </li>
                 <li>
-                   <a href="#">GIFT</a>
-                    <div class="gsnb">
+                   <a class="gnb_tit" href="#">GIFT</a>
+                    <div class="gsnb gift">
                     <ul class="menu_item">
-                   <li><a href="#">여성 선물</a></li>
+                   <li><a class="first_tit" href="#">여성 선물</a></li>
                     <li><a href="#">소중한 선물</a></li>
                     <li><a href="#">새로운 에센셜</a></li>
                   </ul>
                     <ul class="menu_item">
-                   <li><a href="#">남성 선물</a></li>
+                   <li><a class="first_tit" href="#">남성 선물</a></li>
                     <li><a href="#">소중한 선물</a></li>
                     <li><a href="#">새로운 에센셜</a></li>
                   </ul>
                   </div>
                 </li>
                 <li>
-                   <a href="#">LINEA ROSSA</a>
-                   <div class="gsnb">
+                   <a class="gnb_tit" href="#">LINEA ROSSA</a>
+                   <div class="gsnb linea">
                     <ul class="menu_item">
-                    <li><a href="#">남성 리네아 로사</a></li>
+                    <li><a class="first_tit" href="#">남성 리네아 로사</a></li>
                     <li><a href="#">레디투웨어</a></li>
                     <li><a href="#">슈즈 </a></li>
                     <li><a href="#">가방 및 액세서리 </a></li>
@@ -261,24 +261,27 @@
           <button type="button" class="plain menu_btn"
           onclick="$('#header').toggleClass('h_open');">
           <span>메뉴 열기/닫기</span>
-        </button>
+        </button>   
+        <div class="all_menu">
+          <a href="#">
+          <img class="img_logo_white" src="./images/comm/prada_white.svg" alt="prada_white">
+         </a>
+          <ul class="menu">
+            <li><a href="#">WOMAN</a></li>
+            <li><a href="#">MAN</a></li>
+            <li><a href="#">GIFT</a></li>
+            <li><a href="#">LINEA ROSSA</a></li>
+          </ul>
+          <ul class="lst-categ2">
+            <li class="categ-item2">
+              <a href="#" class="menu-wish">위시리스트</a>
+            </li>
+            <li class="categ-item2">
+              <a href="#" class="menu-phone">문의하기</a>
+            </li>
+          </ul>
+        </div>
        </div>
-            <div class="all_menu">
-              <ul class="menu">
-                <li><a href="#">WOMAN</a></li>
-                <li><a href="#">MAN</a></li>
-                <li><a href="#">GIFT</a></li>
-                <li><a href="#">LINEA ROSSA</a></li>
-              </ul>
-            </div>
-              <ul class="lst-categ2">
-                <li class="categ-item2">
-                  <a href="#" class="menu-wish">위시리스트</a>
-                </li>
-                <li>
-                  <a href="#" class="menu-phone">문의하기</a>
-                </li>
-              </ul>
       </div>
     </header>
     <main id="main">
