--- a/detailpage.html
+++ b/detailpage.html
@@ -273,17 +273,20 @@
                 <!-- 링크 연결 없이 스크립트 처리 -->
                 <li>
                   <button class="btn-g btn-user">
-                    <span class="material-icons-outlined">
-                      account_circle
-                    </span>
+                    <i class="las la-user"></i>
+                    <!-- <span class="material-icons-outlined">
+                    account_circle
+                    </span> -->
                     <span class="blind">사용자</span>
                   </button>
                   <button class="btn-g btn-search">
-                    <span class="material-icons-outlined"> search </span>
+                    <i class="las la-search"></i>
+                    <!-- <span class="material-icons-outlined"> search </span> -->
                     <span class="blind">검색</span>
                   </button>
                   <button class="btn-g btn-cart">
-                    <span class="material-icons-outlined"> shopping_bag </span>
+                    <i class="las la-shopping-bag"></i>
+                    <!-- <span class="material-icons-outlined"> shopping_bag </span> -->
                   </button>
                 </li>
               </ul>
