--- a/goods-list.html
+++ b/goods-list.html
@@ -45,7 +45,7 @@
   </div>
   <div class="wrap">
     <!-- logo 왼쪽 type -->
-    <header id="header">
+  <header id="header">
       <div class="inner">
         <h1 class="logo">
           <a href="#">
@@ -244,17 +244,20 @@
               <!-- 링크 연결 없이 스크립트 처리 -->
               <li>
                 <button class="btn-g btn-user">
-                  <span class="material-icons-outlined">
+                  <i class="las la-user"></i>
+                  <!-- <span class="material-icons-outlined">
                     account_circle
-                    </span>
+                    </span> -->
                   <span class="blind">사용자</span>
                 </button>
                 <button class="btn-g btn-search">
-                  <span class="material-icons-outlined"> search </span>
+                 <i class="las la-search"></i>
+                  <!-- <span class="material-icons-outlined"> search </span> -->
                   <span class="blind">검색</span>
                 </button>
                 <button class="btn-g btn-cart">
-                  <span class="material-icons-outlined"> shopping_bag </span>
+                  <i class="las la-shopping-bag"></i>
+                  <!-- <span class="material-icons-outlined"> shopping_bag </span> -->
                 </button>
               </li>
             </ul>
@@ -287,8 +290,9 @@
     </header>
     <main id="main">
       <div class="lst-contents">
-        <div class="lst-tit">
-          <a href="#">MAN'S</a>
+        <div class="lst-tit-wrap">
+          <h2 class="lst_tit" href="#">MAN'S</h2>
+          <h3 class="lst_item_tit">레디투웨어</h3>
         </div>
         <div class="slide-wrap">
           <ul class="slide-sub-menu">
